testing a fix for the behaviour of the layout with the  svg when zooming in on mobile

--- a/src/styling/GlobalStyles.styles.css
+++ b/src/styling/GlobalStyles.styles.css
@@ -7,6 +7,7 @@ html {
 body {
   margin: 0;
   background-color: var(--color-background);
+  min-height: 100vh;
   min-height: -webkit-fill-available;
 }
 
